// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schedule Component should render 1`] = `
Array [
  <div
    className="panel"
  >
    <header
      className="panel__header"
    >
      <h3>
        Schedule
      </h3>
    </header>
    <div
      className="panel__content"
    >
      <main
        className="schedules"
      >
        <LightsSchedule
          resetSchedule={[Function]}
          schedule={
            Array [
              <p>
                <strong>
                  "day-5:0"
                </strong>
                 
                Aug 23, 07:00
              </p>,
              <p>
                <strong>
                  "day-7:0"
                </strong>
                 
                Aug 23, 09:00
              </p>,
            ]
          }
          setSchedule={[Function]}
        />
        <RelaySchedule
          resetSchedule={[Function]}
          schedule={
            Array [
              <p>
                <strong>
                  "day-7:0"
                </strong>
                 
                Aug 23, 09:00
              </p>,
              <p>
                <strong>
                  "day-9:0"
                </strong>
                 
                Aug 23, 11:00
              </p>,
            ]
          }
          setSchedule={[Function]}
        />
      </main>
    </div>
  </div>,
]
`;

exports[`Schedule Component should render in override mode 1`] = `
Array [
  <div
    className="panel"
  >
    <header
      className="panel__header"
    >
      <h3>
        Schedule
      </h3>
    </header>
    <div
      className="panel__content"
    >
      <main
        className="schedules"
      >
        <LightsSchedule
          resetSchedule={[Function]}
          schedule={
            <p>
              In override mode
            </p>
          }
          setSchedule={[Function]}
        />
        <RelaySchedule
          resetSchedule={[Function]}
          schedule={
            <p>
              In override mode
            </p>
          }
          setSchedule={[Function]}
        />
      </main>
    </div>
  </div>,
]
`;
